--- a/NetTeam4/NetTeam4/NetTeam4.vcxproj.filters
+++ b/NetTeam4/NetTeam4/NetTeam4.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="src\Server.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\NetworkManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
