--- a/NetTeam4/NetTeam4/NetTeam4.vcxproj
+++ b/NetTeam4/NetTeam4/NetTeam4.vcxproj
@@ -156,7 +156,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Game\World.cpp" />
     <ClCompile Include="src\Client.cpp" />
+    <ClCompile Include="src\Math\Math.cpp" />
     <ClCompile Include="src\Server.cpp" />
     <ClCompile Include="src\Game\Player.cpp" />
     <ClCompile Include="src\Engine\Engine.cpp" />
@@ -164,7 +166,10 @@
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Game\World.h" />
     <ClInclude Include="src\Client.h" />
+    <ClInclude Include="src\Engine\Collision.h" />
+    <ClInclude Include="src\Math\Math.h" />
     <ClInclude Include="src\NetworkManager.h" />
     <ClInclude Include="src\Server.h" />
     <ClInclude Include="src\Game\Player.h" />
